<resources>
    <string name="app_name">DreamCatcher</string>
    <string name="text_Dream">Dream</string>
    <string name="text_Deferred">Deferred</string>
    <string name="text_Fulfilled">Fulfilled</string>
    <string name="text_Entries">Entries</string>
    <string name="text_input">My First Dream</string>
    <string name="last_updated_date">Last Updated 2022-09-29 at 10:59 AM</string>


    <string name="entry_button_0">CONCEIVED</string>
    <string name="entry_button_1">Reflection One</string>
    <string name="entry_button_2">Reflection Two</string>
    <string name="entry_button_3">DEFERRED</string>
    <string name="entry_button_4">button4</string>

    <string name="dream_reflection_count">Reflections: %1$d</string>
    <string name="dream_title">Dream Title</string>
    <string name="dream_icon">Dream TODO</string>
    <string name="dream_date">Dream Date</string>
    <string name="reflection_hint">Enter reflection text</string>

    <string name="reflection_dialog_title">Add Reflection</string>
    <string name="reflection_dialog_positive">Add</string>
    <string name="reflection_dialog_negative">Cancel</string>
    <string name="add_reflection_button">Add Reflection</string>
    <string name="new_dream">New Dream</string>
    <string name="no_dreams">No Dreams!</string>
    <string name="take_photo_menu">Take Photo</string>
    <string name="dream_photo">Dream Photo</string>

    <string name="dream_report">%1$s%2$s%3$s%4$s</string>
    <string name="dream_report_fulfilled">This dream has been Fulfilled.</string>
    <string name="dream_report_deferred">This dream has been Deferred.</string>
    <string name="dream_report_reflections">Reflections: </string>
    <string name="share_dream">Share Dream</string>
    <string name="dream_report_subject">DreamIntent Dream Report</string>
    <string name="send_report">Send dream report via</string>

</resources>